CSS is hard, fix title text-align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ article h3 {
 
 article h1, article h2, article h3, article h4, article h5 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-align: normal;
+    text-align: left;
 }
 
 article p {
